--- a/atividade saque/style.css
+++ b/atividade saque/style.css
@@ -2,6 +2,9 @@
     text-align: center;
     font-family: Arial;
 }
+body{
+    background-color: rgb(0, 0, 0);
+}
 #sacando{
     color: red;
 }
@@ -12,4 +15,31 @@ h1{
     background-color: rgb(228, 154, 18);
     border-radius: 5px;
     padding: 10px;
+}
+#sacar {
+    background-color: red;
+    border-radius: 5px;
+    padding: 5px;
+}
+#sacar:hover{
+    background-color: rgb(255, 150, 150);
+}
+#depositar{
+    background-color: green;
+    border-radius: 5px;
+    padding: 5px;
+}
+#depositar:hover{
+    background-color: rgb(129, 201, 129);
+}
+.container{
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+#extrato{
+    margin-top: 10px;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
 }
