--- a/atividade switch/style.css
+++ b/atividade switch/style.css
@@ -19,7 +19,7 @@ body{
     border-radius: 10px;
 }
 #btn:hover{
-    background-color: rgb(55, 55, 173);;
+    background-color: rgb(55, 55, 173);
 }
 h1 {
     background-color: rgb(20, 20, 133);
