--- a/atividade saque/style.css
+++ b/atividade saque/style.css
@@ -1,9 +1,10 @@
-*{
+body{
+    background-color: rgb(151, 151, 151);
     text-align: center;
     font-family: Arial;
-}
-body{
-    background-color: rgb(0, 0, 0);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 #sacando{
     color: red;
@@ -12,14 +13,18 @@ body{
     color: green;
 }
 h1{
-    background-color: rgb(228, 154, 18);
+    background-color: rgb(25, 124, 128);
     border-radius: 5px;
     padding: 10px;
+    width: 250px;
+    color: white;
 }
 #sacar {
     background-color: red;
     border-radius: 5px;
     padding: 5px;
+    border: none;
+    padding: 10px;
 }
 #sacar:hover{
     background-color: rgb(255, 150, 150);
@@ -28,6 +33,8 @@ h1{
     background-color: green;
     border-radius: 5px;
     padding: 5px;
+    border: none;
+    padding: 10px;
 }
 #depositar:hover{
     background-color: rgb(129, 201, 129);
@@ -36,13 +43,16 @@ h1{
     background-color: white;
     padding: 10px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    gap: 10px;
 }
 #extrato{
-    margin-top: 10px;
     background-color: white;
     padding: 10px;
     border-radius: 10px;
 }
-.copy{
-    color: white;
+.container-btn{
+    margin-top: 10px;
 }
