--- a/atividade escola/style.css
+++ b/atividade escola/style.css
@@ -1,7 +1,38 @@
 body{
     text-align: center;
     font-family: Arial;
+    background-color: black;
 }
 div{
     margin-top: 10px;
+}
+h1{
+    color: white;
+}
+.container{
+    background-color: white;
+    margin: auto;
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: fit-content;
+}
+#res{
+    text-align: left;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.btn{
+    border: none;
+    color: white;
+    background-color: black;
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+}
+.btn:hover{
+    background-color: rgb(43, 43, 43);
 }
