--- a/atividade_DarkUx/style.css
+++ b/atividade_DarkUx/style.css
@@ -7,13 +7,25 @@
 header{
     background-color: #003777;
     height: 50px;
+    display: flex;
 }
-span{
+nav{
+    display: flex;
+    align-items: center;
+}              
+.hamburguer{
+    margin-right: 40px;
+    margin-left: 40px;
     color: white;
+}
+.aba{
+    color: white;
+    margin-right: 30px;
+    margin-left: 30px;
 }
 .oferta{
     color: red;
-    font-size: 30px;
+    font-size: 50px;
     margin-bottom: 20px;
 }
 .preco1{
@@ -24,31 +36,37 @@ span{
 }
 .preco2{
     color: black;
-    font-size: 20px;
+    font-size: 30px;
     margin-bottom: 10px;
 }
 .btn-comprar{
     border-style: none;
     background-color:#003777;
     color: white;
-    padding: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-radius: 10px;
     margin-top: 30px;
-    width: 150px;
-    text-align: center;
-    font-size: 20px;
+    width: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
     cursor: pointer;
+
 }
 .btn-comprar:hover{
     border-style: none;
     background-color:#0f56a7;
     color: white;
-    padding: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-radius: 10px;
-    width: 150px;
+    width: 180px;
 }
 .btn-comprar img{
     color: white;
+    margin-left: 20px;
 }
 .search_bar{
     background-color: white;
@@ -60,7 +78,7 @@ span{
 .foto{
     display: flex;
     width: 70%;
-    height: 575px;
+    height: 703px;
     background-color: aqua;
     border-right: 3px solid black;
     justify-content: center;
@@ -82,12 +100,18 @@ span{
 .carrinho-container{
     background-color: blueviolet;
     display: flex;
-    justify-content: flex-end;
-}
+    flex-direction: column;
+    align-items: end;
+    justify-content: end;
+    height: 50px;
+}   
 .div-descricao-produto{
     background-color: white;
     width: fit-content;
     margin-top: 50px;
     display: flex;
     flex-direction: column;
+}
+.descricao-produto{
+    font-size: 20px;
 }
