--- a/atividade_Node4/templates/cadastrarProdutos.html
+++ b/atividade_Node4/templates/cadastrarProdutos.html
@@ -14,6 +14,8 @@
             <input type="text" name="produto" /><br />
             <span>Preço:</span>
             <input type="text" name="preco" /><br />
+            <span>Quantidade:</span>
+            <input type="text" name="qntd"><br>
             <button type="submit">Cadastrar</button>
         </form>
     </body>
