--- a/atividade_Node8/views/home.handlebars
+++ b/atividade_Node8/views/home.handlebars
@@ -11,6 +11,9 @@
         <p>
             link para acessar os gatos <a href="/gatos">gatos</a>
         </p>
-        {{#if}}
+        {{else}}
+            <p>Vai toma no cu!</p>
+        {{/if}}
+        
     </body>
 </html>
