--- a/atividade_HandleBars/views/musica.handlebars
+++ b/atividade_HandleBars/views/musica.handlebars
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {{#for}}
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <ul>
+
+            <li>musica:
+                {{musicaEscolhida.nome}}
+                / artista:
+                {{musicaEscolhida.artista}}
+            </li>
+
+        </ul>
+    </body>
 </html>
