--- a/atividade_HandleBars/views/musicas.handlebars
+++ b/atividade_HandleBars/views/musicas.handlebars
@@ -9,8 +9,14 @@
         <ul>
             {{#each musicas}}
 
-                <li>musica: {{this.nome}} / artista: {{this.artista}} </li>
-                
+                <li>id:
+                    {{this.id}}
+                    / musica:
+                    {{this.nome}}
+                    / artista:
+                    {{this.artista}}
+                </li>
+
             {{/each}}
         </ul>
     </body>
