--- a/atividade_Node8/views/home.handlebars
+++ b/atividade_Node8/views/home.handlebars
@@ -12,7 +12,7 @@
             link para acessar os gatos <a href="/gatos">gatos</a>
         </p>
         {{else}}
-            <p>Vai toma no cu!</p>
+            <p>pipipipopopo</p>
         {{/if}}
         
     </body>
