adicionei uma mensagem de erro quando não encontra nenhuma música

--- a/atividade_HandleBars/views/musica.handlebars
+++ b/atividade_HandleBars/views/musica.handlebars
@@ -5,12 +5,10 @@
         <title>Document</title>
     </head>
     <body>
-        <ul>
-            <li>musica:
-                {{musicaEscolhida.nome}}
-                / artista:
-                {{musicaEscolhida.artista}}
-            </li>
-        </ul>
+        {{#if erro}}
+            <p>Música não encontrada</p>
+        {{else}}
+            {{> musicaPartial2}}
+        {{/if}}
     </body>
 </html>
