melhorei a página de pesquisa e adicionei o link para as demais páginas

--- a/atividade_HandleBars/public/css/style.css
+++ b/atividade_HandleBars/public/css/style.css
@@ -1,9 +1,10 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+a{
+    text-decoration: none;
+    color: black;
+    background-color: chocolate;
+    padding: 5;
+    border-radius: 5px;
 }
-
-body {
-    background-color: aqua;
+a:hover{
+    background-color: rgb(206, 130, 76);
 }
