--- a/atividade_HandleBars/views/cadastrarMusica.handlebars
+++ b/atividade_HandleBars/views/cadastrarMusica.handlebars
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/musicas/enviar" method="post">
+    <form action="/cadastrar/enviar" method="post">
         <span>ID:</span>
         <input type="text" name="id"><br>
         <span>Música:</span>
