--- a/atividade_HandleBars/views/musica.handlebars
+++ b/atividade_HandleBars/views/musica.handlebars
@@ -5,6 +5,7 @@
         <title>Document</title>
     </head>
     <body>
+        {{> formPesquisa}}
         {{#if erro}}
             <p>Música não encontrada</p>
         {{else}}
