--- a/atividade_HandleBars/views/layouts/main.handlebars
+++ b/atividade_HandleBars/views/layouts/main.handlebars
@@ -2,11 +2,15 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/css/style.css">
         <title>Document</title>
     </head>
     <body>
         <h1>Nav aleatoria</h1>
         {{{body}}}
+        <br>
+        <a href="/">Voltar</a>
         <h1>rodapé aleatorio</h1>
+        
     </body>
 </html>
