organizei os caminhos

--- a/atividade_HandleBars/views/home.handlebars
+++ b/atividade_HandleBars/views/home.handlebars
@@ -11,7 +11,8 @@
      
         <a href="/musicas">Músicas</a><br><br>
         <a href="/musica">Pesquisar  </a><br><br>
-        <a href="/cadastrar">Cadastrar Música</a><br>
+        <a href="/cadastrar">Cadastrar Música</a><br><br>
+        <a href="/a">Login/cadastro de usuário</a><br>
        
         {{else}}
             <p>Acesso Negado</p>
