criei um modulo interno para conexão com o bando de dados

--- a/atividade_siteDeApostas/utilizando_partials/views/cadastrarJogo.handlebars
+++ b/atividade_siteDeApostas/utilizando_partials/views/cadastrarJogo.handlebars
@@ -4,5 +4,6 @@
     <form class="form_cadastro" action="/apostas/salvar" method="post">
         <span>Nome do jogo</span> <br>
         <input placeholder="Digite o nome da musica" name="nome"> <br>
+        <button lass="btn_cadastrar_home" type="submit">Cadastrar</button>
     </form>
 </div>
