--- a/atividade_revisão2/utilizando_partials/views/jogo.handlebars
+++ b/atividade_revisão2/utilizando_partials/views/jogo.handlebars
@@ -1,2 +1,5 @@
 <h1>Jogo: {{jogo.jogo}}</h1>
 <h1>Plataforma: {{jogo.plataforma}}</h1>
+<form action="/deletar/{{jogo.id}}" method="post">
+    <button type="submit">remover</button>
+</form>
