atividade revisão 2 adicionado o update - crud completo

--- a/atividade_revisão2/utilizando_partials/views/jogo.handlebars
+++ b/atividade_revisão2/utilizando_partials/views/jogo.handlebars
@@ -3,3 +3,6 @@
 <form action="/deletar/{{jogo.id}}" method="post">
     <button type="submit">remover</button>
 </form>
+<form action="/updates/{{jogo.id}}" method="get">
+    <button type="submit">Editar dados</button>
+</form>
