atividade uma verificação de livro existente ao cadastrar

--- a/Atividade_Livraria/views/cadastrarLivro.handlebars
+++ b/Atividade_Livraria/views/cadastrarLivro.handlebars
@@ -17,5 +17,5 @@
         {{/each}}
     </select><br><br>
 
-    <button type="submit">Adicionar</button>
+    <button type="submit">Cadastrar</button>
 </form>
