--- a/Atividade_Livraria/views/livro.handlebars
+++ b/Atividade_Livraria/views/livro.handlebars
@@ -1,6 +1,10 @@
 <h1>{{livro.nome}}</h1>
 <h2>Informações:</h2>
-<h3>Autor(a): {{livro.autor}}</h3>
+<h3>Autor(es): |
+{{#each autores}}
+     {{this.autor}} |
+{{/each}}
+</h3>
 <h3>Categoria: {{livro.categoria}}</h3>
 <form action="/livros/deletarLivro/{{livro.id_livro}}" method="post">
     <button type="submit">Deletar</button>
