--- a/Atividade_Livraria/views/partials/livroLista.handlebars
+++ b/Atividade_Livraria/views/partials/livroLista.handlebars
@@ -1,6 +1,6 @@
 <div class="livro">
     <a href="/livros/livroEscolhido/{{this.id_livro}}">
         <h2>{{this.nome}}</h2>
-        <p>{{this.autor}}</p>
+        {{!-- <p>{{this.autor}}</p> --}}
     </a>
 </div>    
