--- a/atividade_sequelize/views/addUser.handlebars
+++ b/atividade_sequelize/views/addUser.handlebars
@@ -1,6 +1,6 @@
 <h1>Cadastro de usuarios</h1>
 
-<form action="/usuarios/create" method="post">
+<form action="/users/create" method="post">
     <span>Nome</span><br>
     <input name="nome" type="text" placeholder="Digite seu nome"><br>
     <span>Ocupação</span><br>
