--- a/Atividade_Livraria/public/css/style.css
+++ b/Atividade_Livraria/public/css/style.css
@@ -9,6 +9,13 @@
     padding-left: 25px;
 }
 
+.autores {
+    display: flex;
+    flex-wrap: wrap;
+    width: auto;
+    gap: 5px;
+}
+
 .categoria-form {
     display: flex;
     align-items: center;
