--- a/atividade_sequelize/views/addUser.handlebars
+++ b/atividade_sequelize/views/addUser.handlebars
@@ -3,8 +3,13 @@
 <form action="/users/create" method="post">
     <span>Nome</span><br>
     <input name="nome" type="text" placeholder="Digite seu nome"><br>
-    <span>Ocupação</span><br>
-    <input name="ocupacao" type="text" placeholder="Digite seu nome"><br>
+    <span>Email</span><br>
+    <input name="email" type="email" placeholder="Digite seu email"><br>
+    <span>Senha</span><br>
+    <input name="senha" type="password" placeholder="Digite a sua senha"><br>
+    <span>Ocupaão</span><br>
+    <input name="ocupacao" type="text" placeholder="Digite sua ocupação"><br>
+    <span>Deseja receber notificação de vagas?</span>
     <input type="checkbox" name="alerta" checked>
     <button type="submit">Cadastrar</button>
 </form>
