--- a/atividade_sequelize/views/addUser.handlebars
+++ b/atividade_sequelize/views/addUser.handlebars
@@ -9,7 +9,7 @@
     <input name="senha" type="password" placeholder="Digite a sua senha"><br>
     <span>Ocupaão</span><br>
     <input name="ocupacao" type="text" placeholder="Digite sua ocupação"><br>
-    <span>Deseja receber notificação de vagas?</span>
     <input type="checkbox" name="alerta" checked>
+    <span>Deseja receber notificação de vagas?</span><br>
     <button type="submit">Cadastrar</button>
 </form>
