--- a/atividade_sequelize/views/partials/user.handlebars
+++ b/atividade_sequelize/views/partials/user.handlebars
@@ -1,6 +1,4 @@
-<div class="div_musicas">
-    <a href="/user/{{this.id}}">
-        <h1>{{this.nome}}</h1>
-        <h3>{{this.ocupacao}}</h3>
-    </a>
-</div>
+<a href="/user/{{this.id}}" class="div_musicas">
+    <h1>{{this.nome}}</h1>
+    <h3>{{this.ocupacao}}</h3>
+</a>
