--- a/atividade_sequelize/views/partials/user.handlebars
+++ b/atividade_sequelize/views/partials/user.handlebars
@@ -1,4 +1,12 @@
 <a href="/user/{{this.id}}" class="div_musicas">
     <h1>{{this.nome}}</h1>
     <h3>{{this.ocupacao}}</h3>
+    <div class="container-forms">
+        <form action="/user/delete/{{this.id}}" method="post">
+            <button type="submit">Deletar</button>
+        </form>
+        <form action="/user/update/{{this.id}}" method="get">
+            <button type="submit">Atualizar</button>
+        </form>
+    </div>
 </a>
