--- a/atividade_sequelize_mvc/src/views/userData.handlebars
+++ b/atividade_sequelize_mvc/src/views/userData.handlebars
@@ -7,8 +7,8 @@
 <br>
 <h1>Experiências</h1>
 <div class="div-exp">
-    {{#if experiencia}}
-        {{#each experiencia}}
+    {{#if user.Experiences}}
+        {{#each user.Experiences}}
             {{> experience}}
         {{/each}}
     {{else}}
