atividade de hoje v2

--- a/atividade_23102023/src/views/home.handlebars
+++ b/atividade_23102023/src/views/home.handlebars
@@ -1,7 +1,7 @@
 <h1>Home</h1>
 
 <div class="btn_cadastrar_home">
-    <a href="/users/cadastrar">+</a>
+    <a href="/pet/cadastrar">+</a>
 </div>
 
 
