--- a/atividade_23102023/src/views/layouts/main.handlebars
+++ b/atividade_23102023/src/views/layouts/main.handlebars
@@ -12,12 +12,8 @@
 <body>
 
     <header>
-        <a href="/">AlpesVantage RH</a>
+        <a href="/">Petz recover</a>
         <div style="margin-left: 980px;">
-            <a style="font-size: 16px; margin-top: 37px;" href="">Inicio</a>
-            <a style="font-size: 16px; margin-top: 37px;" href="">Cadidatos</a>
-            <a style="font-size: 16px; margin-top: 37px;" href="">Empresas</a>
-
         </div>
     </header>
 
