--- a/atividade_23102023/src/views/partials/pet.handlebars
+++ b/atividade_23102023/src/views/partials/pet.handlebars
@@ -5,7 +5,7 @@
         <form action="/pet/delete/{{this.id}}" method="post">
             <button type="submit">Deletar</button>
         </form>
-        <form action="/pet/update/{{this.id}}" method="get">
+        <form action="/pets/update/{{this.id}}" method="get">
             <button type="submit">Atualizar</button>
         </form>
     </div>
