--- a/atividade_23102023/src/views/addPet.handlebars
+++ b/atividade_23102023/src/views/addPet.handlebars
@@ -2,14 +2,14 @@
 
 <form action="/pet/create" method="post">
     <span>Nome</span><br>
-    <input name="nome" type="text" placeholder="Digite o nome" value="{{pet.nome}}"><br>
+    <input name="nome" type="text" placeholder="Digite o nome"><br>
     <span>Raça</span><br>
-    <input name="raca" type="email" placeholder="Digite a raça" value="{{pet.raca}}"><br>
+    <input name="raca" type="text" placeholder="Digite a raça"><br>
     <span>Tipo</span><br>
-    <input name="tipo" type="password" placeholder="Digite o tipo" value="{{pet.tipo}}"><br>
+    <input name="tipo" type="text" placeholder="Digite o tipo"><br>
     <span>Data de Nascimento</span><br>
-    <input name="data_nasc" type="date" value="{{pet.data_nasc}}"><br>
+    <input name="data_nasc" type="date"><br>
     <span>Descrição:</span><br>
-    <input name="descricao" type="text" value="{{pet.descricao}}"><br>
+    <input name="descricao" type="text" placeholder="Digita uma breve descrição (opcional)"><br>
     <button type="submit">Cadastrar</button>
 </form>
