--- a/atividade_23102023_mvc/src/views/petData.handlebars
+++ b/atividade_23102023_mvc/src/views/petData.handlebars
@@ -1,7 +1,7 @@
 <h1>Nome: {{pet.nome}}</h1>
 <h3>raca: {{pet.raca}}</h3>
 <h3>tipo: {{pet.tipo}}</h3>
-<h3>Data de Nascimento: {{pet.data_nasc}}</h3>
+<h3>Data de Nascimento: {{data_nasc}}</h3>
 <br>
 <h1>Descrição: </h1>
 {{#if pet.descricao}}
