atividade sequelize com CRUD duplo

--- a/atividade_sequelize/src/views/addUser.handlebars
+++ b/atividade_sequelize/src/views/addUser.handlebars
@@ -7,7 +7,7 @@
     <input name="email" type="email" placeholder="Digite seu email"><br>
     <span>Senha</span><br>
     <input name="senha" type="password" placeholder="Digite a sua senha"><br>
-    <span>Ocupaão</span><br>
+    <span>Ocupação</span><br>
     <input name="ocupacao" type="text" placeholder="Digite sua ocupação"><br>
     <input type="checkbox" name="alerta" checked>
     <span>Deseja receber notificação de vagas?</span><br>
